--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Refrigenerator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
