--- a/template.html
+++ b/template.html
@@ -11,17 +11,17 @@
 </head>
 <body>
     <header>
-        <h1>&#9836; Strike a Chord &#9836;</h1>
+        <h1>&#9836; Refrigenerator &#9836;</h1>
     </header>
 
     <nav>
-        <p>
-            <a href="index.html">Home</a> &nbsp; &#9838; &nbsp;
-            <a href="products.html">Lessons</a> &nbsp; &#9838; &nbsp;
-            <a href="offers.html">Instructors</a> &nbsp; &#9838; &nbsp;
-            <a href="about.html">Rentals</a> &nbsp; &#9838; &nbsp;
-            <a href="contact.html">Contact</a>
-        </p>
+        <ul>
+            <li><a href="index.html">Home</a> </li>
+            <li><a href="products.html">Lessons</a></li> 
+            <li><a href="offers.html">Instructors</a></li> 
+            <li><a href="about.html">Rentals</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
     </nav>
 
     <!-- Use the main area to add the main content to the webpage -->
