--- a/index.html
+++ b/index.html
@@ -8,27 +8,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Refrigenerator</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1>&#9836; Strike a Chord &#9836;</h1>
+        <a href="index.html">
+            <img src="images/Banner1.webp" alt="banner image" width="100%" height="300px">
+        </a>
     </header>
 
     <nav>
-        <p>
-            <a href="index.html">Home</a> &nbsp; &#9838; &nbsp;
-            <a href="products.html">Lessons</a> &nbsp; &#9838; &nbsp;
-            <a href="offers.html">Instructors</a> &nbsp; &#9838; &nbsp;
-            <a href="about.html">Rentals</a> &nbsp; &#9838; &nbsp;
-            <a href="contact.html">Contact</a>
-        </p>
+        <ul>
+            <li><a href="index.html">Home</a></li> 
+            <li><a href="products.html">Lessons</a> </li>
+            <li><a href="offers.html">Instructors</a></li> 
+            <li><a href="about.html">Rentals</a> </li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
     </nav>
 
     <!-- Use the main area to add the main content to the webpage -->
     <main>
         <div>
-
+            Hi this is the home page. its still under construction ... . ... . 
         </div>
     </main>
     
