--- a/template.html
+++ b/template.html
@@ -7,7 +7,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Refrigenerator</title>
+    <title>Refrigenerator: Home page </title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
