updated: responsiveness for all screen size

--- a/index.html
+++ b/index.html
@@ -9,21 +9,29 @@
     <meta charset="UTF-8">
     <title>Refrigenerator</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Francois+One|Roboto+Slab&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
+        <!-- logo image -->
         <a href="index.html">
-            <img src="images/Banner1.webp" alt="banner image" width="100%" height="300px">
+            <img src="images/forward-fitness-logo.png" alt="logo-image ">
         </a>
     </header>
 
+    <!-- menues -->
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li> 
-            <li><a href="products.html">Lessons</a> </li>
-            <li><a href="offers.html">Instructors</a></li> 
-            <li><a href="about.html">Rentals</a> </li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="about.html">About Us</a></li> 
+            <li><a href="classes.html">Our Team</a></li> 
+            <li><a href="specials.html">Specials</a></li>
+            <li><a href="training.html">Training</a></li> 
+            <li><a href="media.html">Media</a></li> 
+            <li><a href="faqs.html">FAQs</a></li> 
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </nav>
 
