upded: template file

--- a/template.html
+++ b/template.html
@@ -1,47 +1,52 @@
 <!DOCTYPE html>
-<!-- This website template was created by: Student's First Name Student's Last Name -->
+ <!--
+    Student Name:Sushil Thanet
+    File Name:Project REFREGENERATOR 
+    Date: SEPT 27, 2024
+-->
 <html lang="en">
 <head>
-	<title>Forward Fitness Club</title>
-	<meta charset="utf-8">
-    <link rel="stylesheet" href="css/styles.css">
+    <meta charset="UTF-8">
+    <title>Refrigenerator</title>
+    <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Francois+One|Roboto+Slab&display=swap" rel="stylesheet">
+
 </head>
 <body>
+    <header>
+        <!-- logo image -->
+        <a href="index.html">
+            <img src="images/forward-fitness-logo.png" alt="logo-image ">
+        </a>
+    </header>
 
-	<div id="container">
+    <!-- menues -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li> 
+            <li><a href="about.html">About Us</a></li> 
+            <li><a href="classes.html">Our Team</a></li> 
+            <li><a href="specials.html">Specials</a></li>
+            <li><a href="training.html">Training</a></li> 
+            <li><a href="media.html">Media</a></li> 
+            <li><a href="faqs.html">FAQs</a></li> 
+            <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+    </nav>
 
-		<!-- Use the header area for the website name or logo -->
-		<header>
-			<a href="index.html"><img src="images/forward-fitness-logo.png" alt="Forward Fitness Club logo" height="220" width="297"></a>
-		</header>
-		
-		<!-- Use the nav area to add hyperlinks to other pages within the website -->
-		<nav>
-			<ul>
-                <li><a href="index.html">Home</a></li> 
-                <li><a href="about.html">About Us</a></li> 
-                <li><a href="classes.html">Our Team</a></li> 
-                <li><a href="specials.html">Specials</a></li>
-                <li><a href="training.html">Training</a></li> 
-                <li><a href="media.html">Media</a></li> 
-                <li><a href="faqs.html">FAQs</a></li> 
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-		</nav>
-		
-		<!-- Use the main area to add the main content of the webpage -->
-		<main>
-		</main>
-		
-		<!-- Use the footer area to add webpage footer content -->
-		<footer>
-			<p>&copy; Copyright 2021. All Rights Reserved.</p>
-			<p><a href="mailto:forwardfitness@club.net">forwardfitness@club.net</a></p>
-		</footer>
-	
-	</div>
-	
+    <!-- Use the main area to add the main content to the webpage -->
+    <main>
+        <div>
+            Hi this is the home page. its still under construction ... . ... . 
+        </div>
+    </main>
+    
+    <footer>
+        <p>&copy; Copyright 2021. All Rights Reserved.</p>
+        <p>
+            <a href="emailto:lessons@strikeachord.net">lessons@strikeachord.net</a>
+        </p>
+    </footer>
 </body>
 </html>
